--- a/index.html
+++ b/index.html
@@ -98,6 +98,150 @@
         </div>
         </a>
     </section>
-
+    <section class="featured container">
+        <div class="featured__text">
+            <h3>Fetured Items</h3>
+            <p class="featured__text__description">Shop for items based on what we featured in this week</p>
+        </div>
+        <div class="featured__items">
+            <div class="featured__items__item">
+                <div class="featured__items__item__hover">
+                    <a class="featured__items__item__hover__add">
+                        <img src="img/cart_hover.svg" alt="cart_hover">Add to Cart
+                    </a>
+                </div>
+                  <img src="img/featured_items_1.jpg" alt="featured_items_1" width="261" height="280">
+                  <a href="#" class="featured__items__item__link">
+                      <p class="featured__items__item__link__title">Mango  People  T-shirt</p>
+                      <p class="featured__items__item__link__price">$52.00</p>
+                  </a>
+            </div>
+            <div class="featured__items__item">
+                <div class="featured__items__item__hover">
+                    <a class="featured__items__item__hover__add">
+                        <img src="img/cart_hover.svg" alt="cart_hover">Add to Cart
+                    </a>
+                </div>
+                <img src="img/featured_items_2.jpg" alt="featured_items_2">
+                <a href="#" class="featured__items__item__link">
+                    <p class="featured__items__item__link__title">Mango  People  T-shirt</p>
+                    <p class="featured__items__item__link__price">$52.00</p>
+                </a>
+            </div>
+            <div class="featured__items__item">
+                <div class="featured__items__item__hover">
+                    <a class="featured__items__item__hover__add">
+                        <img src="img/cart_hover.svg" alt="cart_hover">Add to Cart
+                    </a>
+                </div>
+                <img src="img/featured_items_3.jpg" alt="featured_items_3">
+                <a href="#" class="featured__items__item__link">
+                    <p class="featured__items__item__link__title">Mango  People  T-shirt</p>
+                    <p class="featured__items__item__link__price">$52.00</p>
+                </a>
+            </div>
+            <div class="featured__items__item">
+                <div class="featured__items__item__hover">
+                    <a class="featured__items__item__hover__add">
+                        <img src="img/cart_hover.svg" alt="cart_hover">Add to Cart
+                    </a>
+                </div>
+                <img src="img/featured_items_4.jpg" alt="featured_items_4">
+                <a href="#" class="featured__items__item__link">
+                    <p class="featured__items__item__link__title">Mango  People  T-shirt</p>
+                    <p class="featured__items__item__link__price">$52.00</p>
+                </a>
+            </div>
+            <div class="featured__items__item">
+                <div class="featured__items__item__hover">
+                    <a class="featured__items__item__hover__add">
+                        <img src="img/cart_hover.svg" alt="cart_hover">Add to Cart
+                    </a>
+                </div>
+                <img src="img/featured_items_5.jpg" alt="featured_items_5">
+                <a href="#" class="featured__items__item__link">
+                    <p class="featured__items__item__link__title">Mango  People  T-shirt</p>
+                    <p class="featured__items__item__link__price">$52.00</p>
+                </a>
+            </div>
+            <div class="featured__items__item">
+                <div class="featured__items__item__hover">
+                    <a class="featured__items__item__hover__add">
+                        <img src="img/cart_hover.svg" alt="cart_hover">Add to Cart
+                    </a>
+                </div>
+                <img src="img/featured_items_6.jpg" alt="featured_items_6">
+                <a href="#" class="featured__items__item__link">
+                    <p class="featured__items__item__link__title">Mango  People  T-shirt</p>
+                    <p class="featured__items__item__link__price">$52.00</p>
+                </a>
+            </div>
+            <div class="featured__items__item">
+                <div class="featured__items__item__hover">
+                    <a class="featured__items__item__hover__add">
+                        <img src="img/cart_hover.svg" alt="cart_hover">Add to Cart
+                    </a>
+                </div>
+                <img src="img/featured_items_7.jpg" alt="featured_items_7">
+                <a href="#" class="featured__items__item__link">
+                    <p class="featured__items__item__link__title">Mango  People  T-shirt</p>
+                    <p class="featured__items__item__link__price">$52.00</p>
+                </a>
+            </div>
+            <div class="featured__items__item">
+                <div class="featured__items__item__hover">
+                    <a class="featured__items__item__hover__add">
+                        <img src="img/cart_hover.svg" alt="cart_hover">Add to Cart
+                    </a>
+                </div>
+                <img src="img/featured_items_8.jpg" alt="featured_items_8">
+                <a href="#" class="featured__items__item__link">
+                    <p class="featured__items__item__link__title">Mango  People  T-shirt</p>
+                    <p class="featured__items__item__link__price">$52.00</p>
+                </a>
+            </div>
+        </div>
+        <div class="featured__linkToAll">
+            <a href="#" class="featured__linkToAll__a">Browse All Product<i class="fas fa-long-arrow-alt-right"></i></a>
+        </div>
+    </section>
+    <section class="offer container">
+        <div class="offer__left">
+            <p class="offer__left__first">30% <span>offer</span></p>
+            <p class="offer__left__second">for women</p>
+        </div>
+        <div class="offer__right">
+            <div class="offer__right__content">
+                <img src="img/delivery.svg" alt="delivery">
+                <div class="offer__right__content__text">
+                <h3>Free Delivery</h3>
+                <p class="offer__right__content__text__p">
+                    Worldwide delivery on all.
+                    Authorit tively morph next-generation innov tion with extensive models.
+                </p>
+                </div>
+            </div>
+            <div class="offer__right__content">
+                <img src="img/discount.svg" alt="discount">
+                <div class="offer__right__content__text">
+                <h3>Sales & discounts</h3>
+                <p class="offer__right__content__text__p">
+                    Worldwide delivery on all.
+                    Authorit tively morph next-generation innov tion with extensive models.
+                </p>
+                </div>
+            </div>
+            <div class="offer__right__content">
+                <img src="img/assurance.svg" alt="assurance">
+                <div class="offer__right__content__text">
+                <h3>Quality assurance</h3>
+                <p class="offer__right__content__text__p">
+                    Worldwide delivery on all.
+                    Authorit tively morph next-generation innov tion with extensive models.
+                </p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
