--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </section>
     <section class="featured container">
         <div class="featured__text">
-            <h3>Fetured Items</h3>
+            <h3>Featured Items</h3>
             <p class="featured__text__description">Shop for items based on what we featured in this week</p>
         </div>
         <div class="featured__items">
